# pastebin-cli

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yaml
artifacts/: list.xml  userdetails.xml
pastebin-api/: list.bru  pastebin_api_sandbox.ipynb  show-paste.bru  usersdetails.bru
pastebin-api-sandbox/: bruno.json  list.bru  show_paste.bru  usersdetails.bru
src/pastebin_cli/: config.py  display.py  filelib.py  main.py  pastebin_api.py
src/test/: test_get_content.py  test_load_config.py
